--- a/app/src/main/res/layout/credits_debits.xml
+++ b/app/src/main/res/layout/credits_debits.xml
@@ -184,4 +184,27 @@
             android:paddingBottom="30dp"/>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="20dp"
+        android:paddingRight="50dp"
+        android:paddingLeft="50dp">
+
+        <Button
+            android:id="@+id/creditDebitBtn"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="1dp"
+            android:layout_weight="1"
+            android:background="#02ffeb"
+            android:gravity="center"
+            android:padding="5dp"
+            android:text="Submit"
+            android:textColor="gray"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
 </LinearLayout>
