Added submit buttons and fixed radio buttons

--- a/app/src/main/res/layout/recurring.xml
+++ b/app/src/main/res/layout/recurring.xml
@@ -39,60 +39,31 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingTop="20dp">
-    </LinearLayout>
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp">
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        <RadioGroup
+            android:id="@+id/radioGroup2"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/creditRadio2"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:paddingRight="20dp"
-            android:text="Credit"
-            android:textColor="#ffffffff"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:paddingLeft="20dp"/>
+            <RadioButton
+                android:id="@+id/creditRadioButton2"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#ffffffff"
+                android:textSize="20sp"
+                android:text="Credit" />
 
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:text=""
-            android:id="@+id/creditRadioButton2"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/debitRadio2"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="left"
-            android:paddingRight="27.25dp"
-            android:text="Debit"
-            android:textColor="#ffffffff"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:paddingLeft="20dp"
-            android:paddingBottom="30dp"
-            android:paddingTop="28dp"/>
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:text=""
-            android:gravity="left"
-            android:id="@+id/debitRadioButton2"
-            android:paddingTop="30dp"
-            android:layout_marginTop="@dimen/abc_dialog_padding_material"/>
+            <RadioButton
+                android:id="@+id/debitRadioButton2"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#ffffffff"
+                android:textSize="20sp"
+                android:text="Debit" />
+        </RadioGroup>
     </LinearLayout>
 
     <LinearLayout
@@ -150,7 +121,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingTop="20dp">
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp">
 
         <TextView
             android:id="@+id/amount2"
@@ -195,25 +167,25 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="match_parent"
+        android:layout_height="100dp"
         android:orientation="horizontal"
         android:paddingTop="30dp">
 
         <TextView
             android:id="@+id/howOften"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="left"
+            android:layout_height="75dp"
             android:paddingRight="27.25dp"
             android:text="How Often?"
             android:textColor="#ffffffff"
             android:textSize="20sp"
             android:textStyle="bold"
             android:paddingLeft="20dp"
-            android:paddingTop="10dp"/>
+            android:paddingTop="10dp"
+            android:gravity="start"/>
         <Spinner
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="75dp"
             android:id="@+id/type3Spinner"
             android:entries="@array/type3Array"
             android:layout_below="@+id/textView"
@@ -223,12 +195,27 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingTop="30dp">
+        android:paddingTop="10dp">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="@android:color/black"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="20dp"
+        android:paddingRight="75dp"
+        android:paddingLeft="75dp"
+        android:paddingBottom="20dp">
 
         <Button
-            android:id="@+id/recurringBtn"
+            android:id="@+id/recurringSubmit"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="1dp"
@@ -237,7 +224,7 @@
             android:gravity="center"
             android:padding="5dp"
             android:text="Submit"
-            android:textColor="gray"
+            android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold" />
     </LinearLayout>
