--- a/app/src/main/res/layout/credits_debits.xml
+++ b/app/src/main/res/layout/credits_debits.xml
@@ -39,60 +39,31 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:paddingBottom="20dp"
         android:paddingTop="20dp">
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/creditRadio1"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:paddingRight="20dp"
-            android:text="Credit"
-            android:textColor="#ffffffff"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:paddingLeft="20dp"/>
+        <RadioGroup
+            android:id="@+id/radioGroup1"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
         <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:text=""
-            android:id="@+id/creditRadioButton1"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/debitRadio1"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="left"
-            android:paddingRight="27.25dp"
-            android:text="Debit"
+            android:id="@+id/creditRadioButton1"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
             android:textColor="#ffffffff"
             android:textSize="20sp"
-            android:textStyle="bold"
-            android:paddingLeft="20dp"
-            android:paddingBottom="30dp"
-            android:paddingTop="28dp"/>
+            android:text="Credit" />
 
         <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:text=""
-            android:gravity="left"
             android:id="@+id/debitRadioButton1"
-            android:paddingTop="30dp"
-            android:layout_marginTop="@dimen/abc_dialog_padding_material"/>
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#ffffffff"
+            android:textSize="20sp"
+            android:text="Debit" />
+        </RadioGroup>
     </LinearLayout>
 
     <LinearLayout
@@ -152,7 +123,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingTop="20dp">
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp">
 
         <TextView
             android:id="@+id/amount1"
@@ -187,13 +159,24 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="@android:color/black"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingTop="20dp"
-        android:paddingRight="50dp"
-        android:paddingLeft="50dp">
+        android:paddingRight="75dp"
+        android:paddingLeft="75dp">
 
         <Button
-            android:id="@+id/creditDebitBtn"
+            android:id="@+id/creditDebitSubmit"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="1dp"
@@ -202,7 +185,7 @@
             android:gravity="center"
             android:padding="5dp"
             android:text="Submit"
-            android:textColor="gray"
+            android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold" />
     </LinearLayout>
