can put inputs into credits/debits and see them in breakdowns for debits and checking radio buttons only so far, i just need to copy some code over to get the other sets working. Still need to set checks, resets on selections on commit button presses, better querys, etc.

--- a/app/src/main/res/layout/breakdown.xml
+++ b/app/src/main/res/layout/breakdown.xml
@@ -56,22 +56,13 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_height="154dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/creditList"
+        <ListView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:paddingRight="20dp"
-            android:text="List goes here (scrollView)"
-            android:textColor="#ffffffff"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:scrollbars = "vertical"/>
+            android:layout_height="wrap_content"
+            android:id="@+id/creditList" />
     </LinearLayout>
 
     <LinearLayout
@@ -106,23 +97,14 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="horizontal">
+        android:layout_height="143dp"
+        android:orientation="horizontal"
+        android:layout_weight="0.38">
 
-        <TextView
-            android:id="@+id/debitList"
+        <ListView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:paddingRight="20dp"
-            android:text="List goes here (scrollView)"
-            android:textColor="#ffffffff"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:phoneNumber="false"
-            android:scrollbars = "vertical"/>
+            android:layout_height="wrap_content"
+            android:id="@+id/debitList" />
     </LinearLayout>
 
 </LinearLayout>
